--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Set up Node.js ${{ matrix.node-version }}
-        uses: actions/.setup-node@v1
+        uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
     
