--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "airbnb",
     "plugin:jsx-a11y/recommended",
     "prettier",
-    "prettier/react"
+    "prettier"
   ],
   "plugins": [
     "jsx-a11y",
